--- a/styles.css
+++ b/styles.css
@@ -18,17 +18,18 @@ body {
     margin: auto;
     background-color: transparent!important;
     align-content: center;
+    border: none;
 }
 
 button {
-    margin: 10px;
+    margin: 20px;
     background-color: blue;
     color: white;
     border-radius: 5px;
     border-color: transparent;
 }
 .form-inline {
-    margin: 10px;
+    margin: 20px;
 }
 img {
     margin: 20px;
